# rag-system

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.py
data/processed/: .gitkeep
data/raw/: .gitkeep
notebooks/: evaluation_analysis.ipynb
scripts/: evaluate_retrieval.py  ingest_documents.py  run_demo.py  tune_hyperparameters.py
src/: __init__.py  constants.py  pipeline.py
src/embeddings/: __init__.py  embedder.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/generation/: __init__.py  generator.py
src/guardrails/: __init__.py  hallucination_detector.py
src/ingestion/: __init__.py  chunker.py  document_loader.py
src/retrieval/: __init__.py  retriever.py  vector_store.py
src/utils/: __init__.py  formatters.py  json_parser.py  llm_factory.py
tests/: test_ingestion.py  test_pipeline.py  test_retrieval.py
